src/objects/ConferenceRoom__c.object
<CustomObject>
    <fields>
        <fullName>Building_Name__c</fullName>
        <label>Building Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeoLocation__c</fullName>
        <label>GeoLocation</label>
        <scale>0</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>RoomImage__c</fullName>
        <label>RoomImage</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Seating_Capacity__c</fullName>
        <label>Seating Capacity</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>ConferenceRoom</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ConferenceRoom Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ConferenceRooms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>